cocos2d-2.1rc0-x-2.1.3 @May.01 2013
[all platforms]
     Bug      #1853: use SHELLOPTS instead of "-o igncr" for Android Eclipse project
     Bug      #1860: fix a bug that onNodeLoaded will be called twice if ccb was added as a CCBFile
     Bug      #1862: fix a bug that CCScrollView::setContainer may cause dangling pointer when NULL is passed into
     Bug      #1876: fix a bug that CCScale9Sprite::setColor() & setOpacity() are broken
     Bug      #1935: fix a bug that use "==" for float comparison of CCPoint and CCSize
     Bug      #1937: fix a bug that CCControl's touch priority is not set correctly, m_nDefaultTouchPriority is never used
     Bug      #1943: added some missing function for setting integer shader uniforms in CCGLProgram
     Bug      #1999: allowing to set fontName and fontSize separately for CCEditBox
     Bug      #2003: fix a potential crash in CCScheduler::removeHashElement()
     Bug      #2030: fix a bug that scissor rectangle in nested CCScrollView is wrong
     Bug      #2031: make CCFileUtils::createXXXXWithContentsOfFile() support relative path
     Bug      #2035: fix a potential crash in CCSaxParser
     Bug      #2037: fix a wrong logic in CCArray::initWithObjects()
     Bug      #2040: get scale property from sub-ccb node may trigger an assert
     Bug      #2054: fix a bug that anchorPoint property of CCScale9Sprite doesn't work in CCBReader
     Bug      #2055: enable easy switching between Box2D and chipmunk
     Bug      #2058: properly resets the tile's Y flipping
     Bug      #2061: fix a bug that wrong type of argument signature is used in setAccelerometerIntervalJNI function
     Bug      #2073: fix a memory leak in CCUserDefault
     Bug      #2080: fix a bug that _realOpacity isn't assigned in CCLayerColor::initWithColor
     Feature  #2001: add CCRemoveSelf Action
     Feature  #2048: support variable cell sizes in CCTableView